# unofficial_gugik_stac

./: .gitignore  README.md
.devcontainer/: devcontainer.json
ggkstac/: pyproject.toml
ggkstac/src/ggkstac/: __init__.py  __main__.py  catalog.py  cli.py  const.py  log.py  orto.py  utils.py
ggkstac/src/ggkstac/ortho/: const.py  download.py  parsing.py  wfs.py
