[project]
name = "ggkstac"
version = "0.1.0"
description = "Creates a STAC Catalog with data published by the office of Chief Surveyor of Poland."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.1",
    "httpx>=0.27.2",
    "owslib>=0.32.0",
    "pyarrow>=18.0.0",
    "pystac[orjson]>=1.11.0",
    "pytz>=2024.2",
]

[project.scripts]
ggkstac = "ggkstac.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "UP", "SIM", "I"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
